[feat] : fix merige